Added before_install to .travis.yml to allow access to gradle

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ android:
     - extra-android-m2repository
     - addon-google_apis-google-19
 
+before_install:
+ - chmod +x gradlew
+
 install: ./install-dependencies.sh
 
 script:
