--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,11 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
     - addon-google_apis-google-19
+  licenses:
+    - 'android-sdk-preview-license-52d11cd2'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
+
 
 before_install:
  - chmod +x gradlew
