--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: android
+sudo: required
 jdk: oraclejdk8
 android:
   components:
@@ -18,6 +19,9 @@ android:
 
 before_install:
  - chmod +x gradlew
+  - mkdir "$ANDROID_SDK/licenses" || true
+  - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_SDK/licenses/android-sdk-license"
+
 
 script:
    - ./gradlew build connectedCheck --stacktrace
