--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,11 @@ android:
     - '.+'
 
 before_install:
+ - chmod +x gradlew
+
+before_script:
  - mkdir "$ANDROID_SDK/licenses" || true
  - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_SDK/licenses/android-sdk-license"
- - chmod +x gradlew,
 
 script:
    - ./gradlew build connectedCheck --stacktrace
