added mkdir and echo as sudo commands

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ before_install:
  - chmod +x gradlew
 
 before_script:
- - mkdir "$ANDROID_SDK/licenses" || true
- - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_SDK/licenses/android-sdk-license"
+ - sudo mkdir "$ANDROID_SDK/licenses" || true
+ - sudo echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_SDK/licenses/android-sdk-license"
 
 script:
    - ./gradlew build connectedCheck --stacktrace
