changed echo -e to echo and > to >> in travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_install:
 before_script:
  - sudo mkdir "$ANDROID_SDK/licenses" || true
  - sudo touch "$ANDROID_SDK/licenses/android-sdk-license"
- - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_SDK/licenses/android-sdk-license"
+ - echo "\n8933bad161af4178b1185d1a37fbf41ea5269c55" >> "$ANDROID_SDK/licenses/android-sdk-license"
 
 script:
    - ./gradlew build connectedCheck --stacktrace
