--- a/.travis.yml
+++ b/.travis.yml
@@ -18,12 +18,13 @@ android:
     - '.+'
 
 before_install:
+ - android update sdk --no-ui --filter build-tools-24.0.2,android-24,extra-android-m2repository
  - chmod +x gradlew
 
 before_script:
  - sudo mkdir "$ANDROID_SDK/licenses" || true
  - sudo touch "$ANDROID_SDK/licenses/android-sdk-license"
- - echo "\n8933bad161af4178b1185d1a37fbf41ea5269c55" >> "$ANDROID_SDK/licenses/android-sdk-license"
+ - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_SDK/licenses/android-sdk-license"
 
 script:
    - ./gradlew build connectedCheck --stacktrace
