--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 language: android
 sudo: required
 jdk: oraclejdk8
+env:
+  global:
+   - ANDROID_API_LEVEL=24
+   - EMULATOR_API_LEVEL=24
+   - ANDROID_BUILD_TOOLS_VERSION=24.0.2
+   - ANDROID_ABI=google_apis/armeabi-v7a
+   - ADB_INSTALL_TIMEOUT=20 # minutes (2 minutes by default)
 android:
   components:
     - tools
@@ -8,9 +15,11 @@ android:
     - platform-tools
     - build-tools-24.0.2
     - android-24
+    - android-$EMULATOR_API_LEVEL
     - extra-google-m2repository
     - extra-android-m2repository
     - addon-google_apis-google-19
+    - sys-img-armeabi-v7a-addon-google_apis-google-$EMULATOR_API_LEVEL
   licenses:
     - 'android-sdk-preview-license-.+'
     - 'android-sdk-license-.+'
@@ -22,6 +31,12 @@ before_install:
  - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
  - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
  - chmod +x gradlew
+
+before_script:
+  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+  - emulator -avd test -no-skin -no-audio -no-window &
+  - android-wait-for-emulator
+  - adb shell input keyevent 82 &
 
 script:
    - ./gradlew build connectedCheck --stacktrace
