Changed jarsigner code

--- a/.travis.yml
+++ b/.travis.yml
@@ -60,7 +60,10 @@ before_script:
  
 before_deploy:
 - cp $TRAVIS_BUILD_DIR/.keystore $HOME
-- jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 $HOME/android/release-unsigned.apk lukeapp_keystore -keystore $HOME/.keystore -storepass $storepass -keypass $keypass
+#- jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 $HOME/android/release-unsigned.apk lukeapp_keystore -keystore $HOME/.keystore -storepass $storepass -keypass $keypass
+ - jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore $HOME/.keystore -storepass $storepass -keypass $keypass $HOME/android/release-unsigned.apk lukeapp
+
+
 - "${ANDROID_HOME}/build-tools/24.0.2/zipalign 4 $HOME/android/release-unsigned.apk $HOME/android/lukeapp.apk"
  
  
