--- a/.travis.yml
+++ b/.travis.yml
@@ -62,7 +62,13 @@ before_deploy:
 - cp $TRAVIS_BUILD_DIR/.keystore $HOME
 #- jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 $HOME/android/release-unsigned.apk lukeapp_keystore -keystore $HOME/.keystore -storepass $storepass -keypass $keypass
 #- jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore certificates/myappname-cert.keystore -storepass myappname -keypass myappname platforms/android/ant-build/CordovaApp-release-unsigned.apk myappname
-- jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 lukeapp_keystore -keystore $HOME/.keystore -storepass $storepass -keypass $keypass $HOME/android/release-unsigned.apk duke
+
+# try this next
+#- jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore /working/mystore -storepass <keystore password> -keypass <private key password> -signedjar sbundle.jar bundle.jar jane
+
+
+# Only one alias can be specified
+- jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore $HOME/.keystore -storepass $storepass -keypass $keypass $HOME/android/release-unsigned.apk lukeapp_keystore
 #Only one alias can be specified
 #- jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 lukeapp_keystore -keystore $HOME/.keystore -storepass $storepass -keypass $keypass $HOME/android/release-unsigned.apk lukeapp
 
