--- a/.travis.yml
+++ b/.travis.yml
@@ -64,19 +64,20 @@ before_deploy:
 #- jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore certificates/myappname-cert.keystore -storepass myappname -keypass myappname platforms/android/ant-build/CordovaApp-release-unsigned.apk myappname
 
 # try this next
-#- jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore /working/mystore -storepass <keystore password> -keypass <private key password> -signedjar sbundle.jar bundle.jar jane
+# http://docs.oracle.com/javase/7/docs/technotes/tools/windows/jarsigner.html Example
+#- jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore $HOME/.keystore -storepass $storepass -keypass $keypass $HOME/android/release-unsigned.apk lukeapp_keystore
 
 
-# Only one alias can be specified
-- jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore $HOME/.keystore -storepass $storepass -keypass $keypass $HOME/android/release-unsigned.apk lukeapp_keystore
+# jarsigner: unable to open jar file: /home/travis/android/release-unsigned.apk
+- jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore $HOME/.keystore -storepass $storepass -keypass $keypass app/build/outputs/apk/release-unsigned.apk lukeapp_keystore
 #Only one alias can be specified
 #- jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 lukeapp_keystore -keystore $HOME/.keystore -storepass $storepass -keypass $keypass $HOME/android/release-unsigned.apk lukeapp
 
 - "${ANDROID_HOME}/build-tools/24.0.2/zipalign 4 $HOME/android/release-unsigned.apk $HOME/android/lukeapp.apk"
  
  
-#- cd app/build/outputs/apk/
-#- ls -a
+- cd app/build/outputs/apk/
+- ls -a
 deploy:
   provider: releases
   #file: app-debug.apk
