--- a/.travis.yml
+++ b/.travis.yml
@@ -71,7 +71,10 @@ before_deploy:
 - cd app/build/outputs/apk/
 - ls -a
 # jarsigner: unable to open jar file: /home/travis/android/release-unsigned.apk
-- jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore $HOME/.keystore -storepass $storepass -keypass $keypass app/build/outputs/apk/release-unsigned.apk lukeapp_keystore
+#- jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore $HOME/.keystore -storepass $storepass -keypass $keypass app/build/outputs/apk/release-unsigned.apk lukeapp_keystore
+# v2 of upper one
+- jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 -keystore $HOME/.keystore -storepass $storepass -keypass $keypass app-release-unsigned.apk lukeapp_keystore
+
 #Only one alias can be specified
 #- jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 lukeapp_keystore -keystore $HOME/.keystore -storepass $storepass -keypass $keypass $HOME/android/release-unsigned.apk lukeapp
 
