--- a/.travis.yml
+++ b/.travis.yml
@@ -78,7 +78,9 @@ before_deploy:
 #Only one alias can be specified
 #- jarsigner -verbose -sigalg SHA1withRSA -digestalg SHA1 lukeapp_keystore -keystore $HOME/.keystore -storepass $storepass -keypass $keypass $HOME/android/release-unsigned.apk lukeapp
 
-- "${ANDROID_HOME}/build-tools/24.0.2/zipalign 4 $HOME/android/release-unsigned.apk $HOME/android/lukeapp.apk"
+#Unable to open '/home/travis/android/release-unsigned.apk' as zip archive
+#- "${ANDROID_HOME}/build-tools/24.0.2/zipalign 4 app-release-unsigned.apk $HOME/android/lukeapp.apk"
+- "${ANDROID_HOME}/build-tools/24.0.2/zipalign 4 app-release-unsigned.apk $HOME/android/lukeapp.apk"
  
  
 - cd app/build/outputs/apk/
