--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta3'
     compile 'com.intellij:annotations:+@jar'
     compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:cardview-v7:25.0.0'
 }
