--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta3'
     compile 'com.intellij:annotations:+@jar'
     compile 'com.android.support:design:24.2.1'
-    compile 'com.android.support:cardview-v7:25.0.0'
+    compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'org.osmdroid:osmdroid-android:5.5:release@aar'
 }
