--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'org.osmdroid:osmdroid-android:5.5:release@aar'
+    compile 'com.google.code.findbugs:jsr305:2.0.1'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 }
