Added SubmissionFetchService to fetch submissions from server, added SubmissionDatabase as SQLDatabaseHelper to store submissions to local DB

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,10 +47,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".NewUserActivity"></activity>
+        <activity android:name=".NewUserActivity" />
         <activity
             android:name="com.auth0.android.provider.WebAuthActivity"
-            android:theme="@style/Lock.Theme"></activity>
+            android:theme="@style/Lock.Theme" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -59,7 +59,7 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"></meta-data>
+                android:resource="@xml/file_paths" />
 
 
         </provider>
@@ -69,6 +69,8 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyD4AFZBvA2mMOzhYtXcjmUTeUCmCycxffw"/>
+
+        <service android:name=".SubmissionFetchService" />
 
     </application>
 
