a new style for the login page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
             android:label="@string/app_name"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
-            android:theme="@style/Lock.Theme">
+            android:theme="@style/MyLockTheme">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
